Add missing measurements

--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -31,6 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from evaluate_data import CSV_DIRNAME, WAV_DIRNAME, RES_DIRNAME, FS, DURATION_SEC\n",
+    "from evaluate_data import read_df, get_spectrogram, add_soundlevel\n",
+    "\n",
     "def custom_save(function=plt.savefig, fname=\"\"):\n",
     "    if not os.path.exists(os.path.dirname(fname)):\n",
     "        os.makedirs(os.path.dirname(fname))\n",
@@ -54,17 +57,34 @@
     "        fig, ax = plt.subplots()\n",
     "    ax.semilogy(df.timestamp_s, df.sound_level, label=label, marker=\"o\")\n",
     "    ax.set_xlabel('time [s]')\n",
-    "    ax.set_ylabel('sound level')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from evaluate_data import CSV_DIRNAME, WAV_DIRNAME, RES_DIRNAME, FS, DURATION_SEC\n",
-    "from evaluate_data import read_df, get_spectrogram, add_soundlevel"
+    "    ax.set_ylabel('sound level')\n",
+    "\n",
+    "def read_df_from_wav(fname):\n",
+    "    from scipy.signal import stft\n",
+    "    from scipy.io import wavfile\n",
+    "    fs, source_data = wavfile.read(fname)\n",
+    "    \n",
+    "    n_buffer = 1024\n",
+    "    \n",
+    "    print(source_data.shape)\n",
+    "\n",
+    "    f, t, source_stft = stft(source_data, fs, nperseg=n_buffer, axis=0)\n",
+    "    print(source_stft.shape)\n",
+    "    \n",
+    "    source_freq = np.fft.rfftfreq(n=n_buffer, d=1/fs) # n_frequencies x n_times\n",
+    "\n",
+    "    df = pd.DataFrame(columns=df_source.columns)\n",
+    "    for i in range(source_stft.shape[1]):\n",
+    "        df.loc[len(df), :] = {\n",
+    "            \"index\": i,\n",
+    "            \"timestamp\": i * 1024/fs * 1000, # miliseconds\n",
+    "            \"n_mics\": 2,\n",
+    "            \"topic\": \"measurement_mic\",\n",
+    "            \"signals_f\": source_stft[:, i], \n",
+    "            \"frequencies\": source_freq,\n",
+    "            \"n_frequencies\": len(source_freq)\n",
+    "        }\n",
+    "    return df"
    ]
   },
   {
@@ -85,10 +105,10 @@
     "#duration = 10 * 1e3 # miliseconds from end\n",
     "duration = DURATION_SEC * 1e3 # miliseconds from end\n",
     "\n",
-    "source = \"mono_linear\"\n",
+    "source = \"random_linear\"\n",
     "df_source, pose_source  = read_df(degree=0, props=False, snr=False, motors=False, source=source)\n",
     "df_all, pose_all = read_df(degree=0, props=False, snr=False, motors=True, source=source)\n",
-    "df_props, pose_props = read_df(degree=0, props=False, snr=False, motors=True, source=source)\n",
+    "df_props, pose_props = read_df(degree=0, props=False, snr=False, motors=True, source=None)\n",
     "\n",
     "spectrogram_source = get_spectrogram(df_source)\n",
     "spectrogram_all = get_spectrogram(df_all)\n",
@@ -151,39 +171,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_df_from_wav(fname):\n",
-    "    from scipy.signal import stft\n",
-    "    from scipy.io import wavfile\n",
-    "    fs, source_data = wavfile.read(fname)\n",
-    "    \n",
-    "    n_buffer = 1024\n",
-    "    \n",
-    "    print(source_data.shape)\n",
-    "\n",
-    "    f, t, source_stft = stft(source_data, fs, nperseg=n_buffer, axis=0)\n",
-    "    print(source_stft.shape)\n",
-    "    source_freq = np.fft.rfftfreq(n=n_buffer, d=1/fs) # n_frequencies x n_times\n",
-    "\n",
-    "    df = pd.DataFrame(columns=df_source.columns)\n",
-    "    for i in range(source_stft.shape[1]):\n",
-    "        df.loc[len(df), :] = {\n",
-    "            \"index\": i,\n",
-    "            \"timestamp\": i * 1024/fs * 1000, # miliseconds\n",
-    "            \"n_mics\": 2,\n",
-    "            \"topic\": \"measurement_mic\",\n",
-    "            \"signals_f\": source_stft[:, i], \n",
-    "            \"frequencies\": source_freq,\n",
-    "            \"n_frequencies\": len(source_freq)\n",
-    "        }\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#fname_source = f'{WAV_DIRNAME}/crazyflie_audio_measurements_nomotors_nosnr_noprops_source_45.wav'\n",
     "#fname_all =    f'{WAV_DIRNAME}/crazyflie_audio_measurements_motors_nosnr_noprops_source_45.wav'\n",
     "#fname_props =  f'{WAV_DIRNAME}/crazyflie_audio_measurements_motors_nosnr_noprops_nosource_45.wav'\n",
@@ -191,7 +178,7 @@
     "\n",
     "fname_source = f'{WAV_DIRNAME}/nomotors_nosnr_noprops_{source}.wav'\n",
     "fname_all =    f'{WAV_DIRNAME}/motors_nosnr_noprops_{source}.wav'\n",
-    "fname_props =  f'{WAV_DIRNAME}/motors_nosnr_noprops_{source}.wav'\n",
+    "fname_props =  f'{WAV_DIRNAME}/motors_nosnr_noprops_None.wav'\n",
     "thresh = 1e-10\n",
     "\n",
     "#df_wav_all = read_df_from_wav(fname_all) \n",
@@ -329,6 +316,7 @@
     "    snr=False, \n",
     "    degree=0, \n",
     "    source='random_linear',\n",
+    "    #source='mono_linear',\n",
     "    # will be set later\n",
     "    method=None,\n",
     "    combine=None,\n",
@@ -398,6 +386,7 @@
     "    motors=False,\n",
     "    props=False,\n",
     "    source='random_linear',\n",
+    "    #source='mono_linear',\n",
     "    # fill from above \n",
     "    method='mvdr',\n",
     "    combine='sum',\n",
@@ -455,6 +444,7 @@
     "    method='mvdr',\n",
     "    combine='sum',\n",
     "    source='random_linear',\n",
+    "    #source='mono_linear',\n",
     "    normalize='zero_to_one',\n",
     "    degree=None, \n",
     "    snr=None, \n",
@@ -537,7 +527,8 @@
     "    method='mvdr',\n",
     "    combine='sum',\n",
     "    normalize='zero_to_one',\n",
-    "    source='random_linear',\n",
+    "    #source='random_linear',\n",
+    "    source='mono_linear',\n",
     "    degree=0, \n",
     "    props=True, \n",
     "    snr=None, # will be filled later\n",
@@ -591,7 +582,7 @@
    "outputs": [],
    "source": [
     "# should pick propeller signals:\n",
-    "source = 'random_linear'\n",
+    "source = 'mono_linear'\n",
     "df_snr_noprops,_ = read_df(degree=0, props=False, snr=True, motors=True, source=source)\n",
     "\n",
     "# should pick between propellers (but maybe still too close?)\n",
@@ -600,7 +591,7 @@
     "# should pick uniformly\n",
     "df_nosnr_noprops,_ = read_df(degree=0, props=False, snr=False, motors=True, source=source)\n",
     "\n",
-    "fname_props =  f'{WAV_DIRNAME}/motors_nosnr_noprops_{source}.wav'\n",
+    "fname_props =  f'{WAV_DIRNAME}/motors_nosnr_noprops_None.wav'\n",
     "#fname_props =  f'{WAV_DIRNAME}/crazyflie_audio_measurements_motors_nosnr_noprops_nosource_45.wav'\n",
     "df_props = read_df_from_wav(fname_props)"
    ]
@@ -652,7 +643,8 @@
     "    method='mvdr',\n",
     "    combine='sum',\n",
     "    normalize='zero_to_one',\n",
-    "    source = 'random_linear',\n",
+    "    #source = 'random_linear',\n",
+    "    source = 'mono_linear',\n",
     "    degree=0, # 20 does not exist\n",
     "    props=False, \n",
     "    snr=False\n",
