Move noise generation

--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -28,7 +28,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyroomacoustics as pra\n",
     "from bin_selection import select_frequencies\n",
     "from signals import generate_signal, amplify_signal\n",
     "from scipy.spatial.transform import Rotation\n",
@@ -54,102 +53,16 @@
     "    plt.xlabel('angle [deg]')\n",
     "    plt.ylabel('frequency [Hz]')\n",
     "    \n",
-    "def select_here():\n",
-    "    if signal_type==\"random\":\n",
-    "        indices = select_frequencies(n_buffer, Fs, min_freq=200, max_freq=7000)\n",
-    "    elif signal_type==\"mono\":\n",
-    "        indices = select_frequencies(n_buffer, Fs, min_freq=frequency_hz, max_freq=frequency_hz)\n",
-    "        indices = np.unique(indices)\n",
-    "    print(f'selecting {len(indices)} bins')\n",
-    "    return indices\n",
-    "\n",
-    "def from_zero_to_2pi(angle):\n",
+    "def from_0_to_2pi(angle):\n",
     "    angle = (angle + np.pi) % (2 * np.pi) - np.pi # -pi to pi\n",
-    "    if angle.ndim > 0:\n",
-    "        angle[angle < 0] += 2 * np.pi\n",
-    "    else:\n",
+    "    if (type(angle) == float) or (angle.ndim == 0):\n",
     "        angle = angle + 2 * np.pi if angle < 0 else angle\n",
-    "    return angle"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Geometrical setup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mic_array import get_square_array, get_uniform_array\n",
+    "    else:\n",
+    "        angle[angle < 0] += 2 * np.pi\n",
+    "    return angle\n",
     "\n",
-    "baseline = 0.1  # meters, square side of mic array\n",
-    "gt_distance = 10  # meters, distance of source\n",
-    "add_noise_mics_positions = 0 \n",
-    "add_noise_times = 0\n",
-    "\n",
-    "#mics_drone = get_square_array(baseline=baseline, delta=0) # 4 x 2\n",
-    "mics_drone = get_uniform_array(2, baseline=baseline) # 4 x 2\n",
-    "if add_noise_mics_positions > 0:\n",
-    "    mics_drone += np.random.normal(scale=add_noise_mics_positions, size=mics_drone.shape)\n",
-    "\n",
-    "gt_angle_deg = 90\n",
-    "gt_angle_rad = gt_angle_deg * np.pi / 180.0\n",
-    "source = gt_distance * np.array([np.cos(gt_angle_rad), np.sin(gt_angle_rad)])\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.scatter(*mics_drone.T)\n",
-    "plt.scatter(*source)\n",
-    "plt.axis('equal')\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.scatter(*mics_drone.T)\n",
-    "plt.axis('equal')\n",
-    "pass"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2. Audio source"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Fs = 30000  # Hz, sampling frequency\n",
-    "duration = 100  # seconds, should be long enough to acocunt for delays and full movement\n",
-    "np.random.seed(1)\n",
-    "noise = 0.0\n",
-    "signal_type = \"mono\"; frequency_hz = 1000 \n",
-    "#signal_type = \"random\"; frequency_hz = None\n",
-    "\n",
-    "source_signal = generate_signal(Fs, \n",
-    "                                signal_type=signal_type, \n",
-    "                                duration_sec=duration, \n",
-    "                                frequency_hz=frequency_hz, \n",
-    "                                noise=noise)\n",
-    "source_signal = amplify_signal(source_signal, target_dB=-10)\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.plot(source_signal[:100])\n",
-    "plt.xlabel('time index [-]')\n",
-    "plt.ylabel('source [-]')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# simulate signals at mics"
+    "def from_0_to_360(angle_deg):\n",
+    "    return 180 / np.pi * from_0_to_2pi(angle_deg / 180 * np.pi)"
    ]
   },
   {
@@ -159,10 +72,11 @@
    "outputs": [],
    "source": [
     "def generate_signals_pyroom(source_signal, mics_rotated, time, noise=0, ax=None):\n",
+    "    import pyroomacoustics as pra\n",
     "    room = pra.AnechoicRoom(fs=Fs, dim=2)\n",
     "    room.add_source(source, signal=source_signal, name=f\"source\")\n",
     "\n",
-    "    beam_former = pra.Beamformer(mics_rotated, room.fs)\n",
+    "    beam_former = pra.Beamformer(mics_rotated, Fs)\n",
     "    room.add_microphone_array(beam_former)\n",
     "    room.simulate()\n",
     "    \n",
@@ -208,38 +122,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Geometrical setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mic_array import get_square_array, get_uniform_array\n",
+    "\n",
+    "baseline = 0.108  # meters, square side of mic array\n",
+    "gt_distance = 10  # meters, distance of source\n",
+    "add_noise_mics_positions = 1e-3  # noise added to mic positions\n",
+    "add_noise_times = 1e-6 # noise added to recording times\n",
+    "\n",
+    "#mics_drone = get_square_array(baseline=baseline, delta=0) # 4 x 2\n",
+    "mics_drone = get_uniform_array(2, baseline=baseline) # 4 x 2\n",
+    "\n",
+    "gt_angle_deg = 90\n",
+    "gt_angle_rad = gt_angle_deg * np.pi / 180.0\n",
+    "source = gt_distance * np.array([np.cos(gt_angle_rad), np.sin(gt_angle_rad)])\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.scatter(*mics_drone.T)\n",
+    "plt.scatter(*source)\n",
+    "plt.axis('equal')\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.scatter(*mics_drone.T)\n",
+    "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Simulate signals at mics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Fs = 44100  # Hz, sampling frequency\n",
+    "n_buffer = 2048\n",
+    "duration = 100  # seconds, should be long enough to acocunt for delays and full movement\n",
+    "np.random.seed(1)\n",
+    "noise = 0.0\n",
+    "\n",
+    "frequencies = np.fft.rfftfreq(n_buffer, 1/Fs)\n",
+    "\n",
+    "signal_type = \"mono\"; \n",
+    "frequency_desired = 600\n",
+    "indices = [np.argmin(np.abs(frequencies - frequency_desired))]\n",
+    "print(indices)\n",
+    "frequency_hz = frequencies[indices]\n",
+    "\n",
+    "print(frequency_hz)\n",
+    "\n",
+    "source_signal = generate_signal(Fs, \n",
+    "                                signal_type=signal_type, \n",
+    "                                duration_sec=duration, \n",
+    "                                frequency_hz=frequency_hz, \n",
+    "                                noise=noise)\n",
+    "source_signal = amplify_signal(source_signal, target_dB=-10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create one long source signal\n",
-    "angular_velocity_deg = 2200 # deg/sec, velocity of drone\n",
-    "n_buffer = 500\n",
+    "angular_velocity_deg = 20 # deg/sec, velocity of drone\n",
     "time_index = 1000 # idx where signal is non-zero for all positions, found heuristically\n",
     "\n",
     "#degrees = [0, 0]\n",
     "#degrees = range(10)\n",
     "#degrees = np.arange(0, 360, 45)\n",
-    "degrees = [0, 85] #, -40] \n",
+    "#degrees = [0, 85] #, -40] \n",
+    "degrees = [0, 20, 45]\n",
     "\n",
     "if angular_velocity_deg != 0:\n",
     "    times_list = [(d-degrees[0])/angular_velocity_deg for d in degrees] # seconds\n",
     "else:\n",
     "    times_list = [0] * len(degrees)\n",
-    "    \n",
-    "if add_noise_times > 0:\n",
-    "    times_list = [t + np.random.normal(scale=add_noise_times) for t in times_list]\n",
     "print('recording times in seconds:', times_list)\n",
     "\n",
     "assert duration > max(times_list)\n",
     "\n",
     "np.random.seed(1)\n",
     "mics_list = [rotate_mics(mics_drone, orientation_deg=degree) for degree in degrees]\n",
-    "# n_mics x n_times\n",
-    "#signals_list = [generate_signals(source_signal, mics.T, time) \n",
-    "#                for mics, time in zip(mics_list, times_list)] \n",
     "\n",
+    "plt.figure()\n",
+    "for degree, mics in zip(degrees, mics_list):\n",
+    "    for j in range(mics.shape[0]):\n",
+    "        plt.scatter(*mics[j], label=f'rot {degree}, mic{j}')\n",
+    "plt.axis('equal')\n",
+    "plt.legend(bbox_to_anchor=[1, 1], loc='upper left')\n",
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "signals_list = []\n",
     "\n",
     "%matplotlib notebook\n",
@@ -252,7 +249,19 @@
     "    ax.set_title(f'signals at time {time:.3f}')\n",
     "    \n",
     "    signals_list.append(signals_received)\n",
-    "buffers = [signals_this[:, time_index:time_index + n_buffer] for signals_this in signals_list] "
+    "buffers = [signals_this[:, time_index:time_index + n_buffer] for signals_this in signals_list] \n",
+    "\n",
+    "if add_noise_mics_positions > 0:\n",
+    "    mics_drone += np.random.normal(scale=add_noise_mics_positions, size=mics_drone.shape)\n",
+    "if add_noise_times > 0:\n",
+    "    times_list = [t + np.random.normal(scale=add_noise_times) for t in times_list]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# sanity check of signal creation"
    ]
   },
   {
@@ -271,46 +280,20 @@
     "    \n",
     "fig, ax = plt.subplots()\n",
     "generate_signals_pyroom(source_signal, mics_list[-1].T, time=1.0, noise=0, ax=ax)\n",
+    "ax.set_title('pyroom')\n",
     "ax.set_xlim(800, 1000)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "generate_signals(source_signal, mics_list[-1], time=1.0, noise=0, ax=ax)\n",
+    "ax.set_title('ours')\n",
     "ax.set_xlim(800, 1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from itertools import cycle\n",
-    "\n",
-    "fig, axs = plt.subplots(len(degrees), sharex=True)\n",
-    "colors = []\n",
-    "for j, (degree, buffer) in enumerate(zip(degrees, buffers)):\n",
-    "    axs[j].set_title(f'rot {degree}')\n",
-    "    for i in range(buffer.shape[0]): # n_mics\n",
-    "        color=f\"C{i}\"\n",
-    "        colors.append(color)\n",
-    "        axs[j].plot(range(buffer.shape[1]), buffer[i], label=f\"mic{i}\", color=color)\n",
-    "    axs[j].set_xlim(0, 20)\n",
-    "\n",
-    "plt.figure()\n",
-    "for degree, mics in zip(degrees, mics_list):\n",
-    "    for j in range(mics.shape[0]):\n",
-    "        plt.scatter(*mics[j], label=f'rot {degree}, mic{j}')\n",
-    "#plt.scatter(*source.T, label='source')\n",
-    "plt.axis('equal')\n",
-    "plt.legend(bbox_to_anchor=[1, 1], loc='upper left')\n",
-    "pass"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# create \"real\" multi-mic array"
+    "# 3. Create \"real\" multi-mic array"
    ]
   },
   {
@@ -320,7 +303,6 @@
    "outputs": [],
    "source": [
     "mics_array = np.concatenate([*mics_list])\n",
-    "print('mics shape:', mics_array.shape)\n",
     "signals_multimic = generate_signals(source_signal, mics_array, time=0)\n",
     "buffer_multimic = signals_multimic[:, time_index:time_index + n_buffer]\n",
     "\n",
@@ -343,9 +325,9 @@
     "counter = 0\n",
     "for j, (degree, buffer, time) in enumerate(zip(degrees, buffers, times_list)):\n",
     "    for i in range(buffer.shape[0]): # n_mics\n",
-    "        phase_shift = from_zero_to_2pi(2 * np.pi * time * frequencies * n_buffer / Fs) * 180 / np.pi\n",
+    "        phase_shift = from_0_to_2pi(- 2 * np.pi * time * frequency_hz) * 180 / np.pi\n",
+    "        time_shift = phase_shift / (360 * frequency_hz)\n",
     "        print(\"phase shift in degrees\", phase_shift)\n",
-    "        time_shift = phase_shift / (360 * frequencies)\n",
     "        print(\"phase shift in time\", time_shift)\n",
     "        label = f\"rot {degree} time {time:.3f} mic{i}\"\n",
     "        axs[counter].axvline(time_shift)\n",
@@ -354,6 +336,13 @@
     "        axs[counter].set_xlim(0, 0.002)\n",
     "        counter += 1\n",
     "plt.suptitle('recorded signals without delay correction')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. DOA estimation"
    ]
   },
   {
@@ -375,9 +364,6 @@
     "angles = beam_former.theta_scan * 180 / np.pi\n",
     "\n",
     "signals_f_multimic = np.fft.rfft(buffer_multimic).T\n",
-    "frequencies = np.fft.rfftfreq(n=n_buffer, d=1 / Fs)\n",
-    "\n",
-    "indices = select_here()\n",
     "\n",
     "signals_f_multimic = signals_f_multimic[indices, :]\n",
     "frequencies = frequencies[indices]\n",
@@ -433,10 +419,10 @@
    "outputs": [],
    "source": [
     "for spectrum, degree in zip(spectra, degrees):\n",
-    "    plot_spectrum(spectrum, gt_angle_deg - degree)\n",
+    "    plot_spectrum(spectrum, from_0_to_360(gt_angle_deg - degree))\n",
     "    plt.title(f'rot {degree}')\n",
     "\n",
-    "plot_spectrum(combined_spectra, gt_angle_deg - degrees[-1])\n",
+    "plot_spectrum(combined_spectra, from_0_to_360(gt_angle_deg - degrees[-1]))\n",
     "plt.title(f'combined spectra')\n",
     "pass"
    ]
@@ -451,17 +437,16 @@
     "\n",
     "signals_f_list_delayed = []\n",
     "for i, (sig_f, time) in enumerate(zip(signals_f_list, times_list)):\n",
-    "    # TODO(FD) figure out if this is correct\n",
-    "    exp_factor = np.exp(1j * 2 * np.pi * frequencies * time * n_buffer / Fs)\n",
-    "    print('phase difference:', from_zero_to_2pi(np.angle(exp_factor)))\n",
+    "    exp_factor = np.exp(1j * 2 * np.pi * frequencies * time)\n",
+    "    print('phase difference in degrees:', from_0_to_2pi(np.angle(exp_factor))*180/np.pi)\n",
     "    signals_f_delayed = np.multiply(sig_f, exp_factor[:, np.newaxis])  # frequencies x n_mics\n",
     "    signals_f_list_delayed.append(signals_f_delayed)\n",
     "    \n",
     "for sig_f, signals_f_delayed, time in zip(signals_f_list, signals_f_list_delayed, times_list):\n",
-    "    print(f'original phases (time={time:.3f}):', from_zero_to_2pi(np.angle(sig_f)))\n",
-    "    print(f'corrected phases(time={time:.3f}):', from_zero_to_2pi(np.angle(signals_f_delayed)))\n",
+    "    print(f'original phases (time={time:.3f}):', from_0_to_2pi(np.angle(sig_f)))\n",
+    "    print(f'corrected phases(time={time:.3f}):', from_0_to_2pi(np.angle(signals_f_delayed)))\n",
     "    \n",
-    "print('multi-mic:', from_zero_to_2pi(np.angle(signals_f_multimic)))"
+    "print('multi-mic:', from_0_to_2pi(np.angle(signals_f_multimic)))"
    ]
   },
   {
@@ -489,9 +474,6 @@
     "    # for testing purposes, we also look at the spectra without compensating\n",
     "    # for the delays.\n",
     "    signals_f_tot_zero = np.c_[signals_f_tot_zero, sig_f]\n",
-    "    \n",
-    "    print('phases, original', np.angle(sig_f))\n",
-    "    print('phases, corrected', np.angle(signals_f_delayed))\n",
     "\n",
     "Rtot_zero = beam_former.get_correlation(signals_f_tot_zero)\n",
     "combined_raw_zero = beam_former.get_mvdr_spectrum(Rtot_zero, frequencies)\n",
@@ -529,16 +511,16 @@
     "plt.semilogy(angles, combined_raw_zero[chosen_idx], label='raw zero', ls=':')\n",
     "plt.semilogy(angles, spectrum_multimic[chosen_idx], label='multi-mic', ls=':')\n",
     "plt.axvline(gt_angle_deg, color='C3', ls=':')\n",
-    "plt.axvline(degrees[-1]-gt_angle_deg, color='C0', ls=':')\n",
+    "plt.axvline(from_0_to_360(gt_angle_deg - degrees[-1]), color='C0', ls=':')\n",
     "plt.legend()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Full pipeline"
+   ]
   }
  ],
  "metadata": {
