Move signal generation

--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -16,8 +16,8 @@
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "#%matplotlib inline\n",
-    "%matplotlib notebook\n",
+    "%matplotlib inline\n",
+    "#%matplotlib notebook\n",
     "\n",
     "sys.path.append('../crazyflie-audio/python/')"
    ]
@@ -28,8 +28,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bin_selection import select_frequencies\n",
-    "from signals import generate_signal, amplify_signal\n",
     "from scipy.spatial.transform import Rotation\n",
     "\n",
     "def rotate_mics(mics, orientation_deg=0):\n",
@@ -95,7 +93,7 @@
     "        ax.axvline(x=time_idx)\n",
     "    return signals[:, time_idx:]\n",
     "\n",
-    "def generate_signals(source_signal, mics_rotated, time, noise=0, ax=None):\n",
+    "def generate_signals(mics_rotated, time, noise=0, ax=None):\n",
     "    from algos_beamforming import get_mic_delays\n",
     "    from constants import SPEED_OF_SOUND\n",
     "\n",
@@ -174,25 +172,17 @@
     "Fs = 44100  # Hz, sampling frequency\n",
     "n_buffer = 2048\n",
     "duration = 100  # seconds, should be long enough to acocunt for delays and full movement\n",
+    "noise = 1e-3 \n",
     "np.random.seed(1)\n",
-    "noise = 0.0\n",
     "\n",
     "frequencies = np.fft.rfftfreq(n_buffer, 1/Fs)\n",
     "\n",
-    "signal_type = \"mono\"; \n",
-    "frequency_desired = 600\n",
+    "signal_type = \"mono\"; frequency_desired = 600\n",
     "indices = [np.argmin(np.abs(frequencies - frequency_desired))]\n",
-    "print(indices)\n",
     "frequency_hz = frequencies[indices]\n",
     "\n",
-    "print(frequency_hz)\n",
-    "\n",
-    "source_signal = generate_signal(Fs, \n",
-    "                                signal_type=signal_type, \n",
-    "                                duration_sec=duration, \n",
-    "                                frequency_hz=frequency_hz, \n",
-    "                                noise=noise)\n",
-    "source_signal = amplify_signal(source_signal, target_dB=-10)"
+    "#signal_type = \"random\"; frequency_hz = None; \n",
+    "print('chosen frequency:', frequency_hz)"
    ]
   },
   {
@@ -232,18 +222,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# sanity check of signal creation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from signals import generate_signal, amplify_signal\n",
+    "source_signal = generate_signal(Fs, \n",
+    "                                signal_type=signal_type, \n",
+    "                                duration_sec=duration, \n",
+    "                                frequency_hz=frequency_hz, \n",
+    "                                noise=noise)\n",
+    "source_signal = amplify_signal(source_signal, target_dB=-10)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "for mic in mics_drone:\n",
+    "    ax.scatter(*mic)\n",
+    "ax.scatter(*source)\n",
+    "ax.axis('equal')\n",
+    "    \n",
+    "fig, ax = plt.subplots()\n",
+    "generate_signals_pyroom(source_signal, mics_list[-1].T, time=1.0, noise=0, ax=ax)\n",
+    "ax.set_title('pyroom')\n",
+    "ax.set_xlim(800, 2000)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "generate_signals(mics_list[-1], time=1.0, noise=0, ax=ax)\n",
+    "ax.set_title('ours')\n",
+    "ax.set_xlim(800, 2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "signals_list = []\n",
     "\n",
-    "%matplotlib notebook\n",
     "for mics, time in zip(mics_list, times_list):\n",
     "    \n",
     "    fig, ax = plt.subplots()\n",
-    "    signals_received =  generate_signals(source_signal, mics, time, noise=noise, ax=ax) \n",
+    "    signals_received =  generate_signals(mics, time, noise=noise, ax=ax) \n",
+    "    #signals_received = generate_signals_pyroom(source_signal, mics.T, time, noise=noise, ax=ax)\n",
     "    ax.set_xlim(800, 1400)\n",
     "    ax.legend([f\"mic{i}\" for i in range(mics.shape[0])])\n",
     "    ax.set_title(f'signals at time {time:.3f}')\n",
@@ -261,38 +293,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# sanity check of signal creation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "for mic in mics_drone:\n",
-    "    ax.scatter(*mic)\n",
-    "ax.scatter(*source)\n",
-    "ax.axis('equal')\n",
-    "    \n",
-    "fig, ax = plt.subplots()\n",
-    "generate_signals_pyroom(source_signal, mics_list[-1].T, time=1.0, noise=0, ax=ax)\n",
-    "ax.set_title('pyroom')\n",
-    "ax.set_xlim(800, 1000)\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "generate_signals(source_signal, mics_list[-1], time=1.0, noise=0, ax=ax)\n",
-    "ax.set_title('ours')\n",
-    "ax.set_xlim(800, 1000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 3. Create \"real\" multi-mic array"
    ]
   },
@@ -303,7 +303,8 @@
    "outputs": [],
    "source": [
     "mics_array = np.concatenate([*mics_list])\n",
-    "signals_multimic = generate_signals(source_signal, mics_array, time=0)\n",
+    "signals_multimic = generate_signals(mics_array, time=0, noise=noise)\n",
+    "#signals_multimic = generate_signals_pyroom(source_signal, mics_array.T, time=0, noise=noise)\n",
     "buffer_multimic = signals_multimic[:, time_index:time_index + n_buffer]\n",
     "\n",
     "fig, axs = plt.subplots(buffer_multimic.shape[0], sharex=True)\n",
