Add new algorithm to beam_former

--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -23,24 +23,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simulation functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.spatial.transform import Rotation\n",
-    "\n",
-    "def rotate_mics(mics, orientation_deg=0):\n",
-    "    \"\"\"\n",
-    "    :param mics: mic positions (n_mics, 2)\n",
-    "    :return mics_rotated: (n_mics, 2)\n",
-    "    \"\"\"\n",
-    "    rot = Rotation.from_euler('z', orientation_deg, degrees=True)\n",
-    "    R = rot.as_matrix() # 3x3\n",
-    "    mics_aug = np.c_[mics, np.ones(mics.shape[0])].T # 3 x 4\n",
-    "    mics_rotated = R.dot(mics_aug)[:2, :] # 2 x 4\n",
-    "    return mics_rotated.T\n",
-    "\n",
     "def plot_spectrum(spectrum, degree=0):\n",
     "    plt.figure()\n",
     "    if spectrum.shape[0] == 1:\n",
@@ -191,6 +185,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from audio_stack.beam_former import rotate_mics\n",
+    "\n",
     "# create one long source signal\n",
     "angular_velocity_deg = 20 # deg/sec, velocity of drone\n",
     "time_index = 1000 # idx where signal is non-zero for all positions, found heuristically\n",
@@ -436,12 +432,18 @@
    "source": [
     "# signals with delay correction\n",
     "\n",
+    "print(mics_drone.shape)\n",
+    "beam_former = BeamFormer(mic_positions=mics_drone)\n",
+    "beam_former.init_multi_estimate(frequencies)\n",
+    "\n",
     "signals_f_list_delayed = []\n",
     "for i, (sig_f, time) in enumerate(zip(signals_f_list, times_list)):\n",
     "    exp_factor = np.exp(1j * 2 * np.pi * frequencies * time)\n",
     "    print('phase difference in degrees:', from_0_to_2pi(np.angle(exp_factor))*180/np.pi)\n",
     "    signals_f_delayed = np.multiply(sig_f, exp_factor[:, np.newaxis])  # frequencies x n_mics\n",
     "    signals_f_list_delayed.append(signals_f_delayed)\n",
+    "    \n",
+    "    beam_former.add_to_multi_estimate(sig_f, frequencies, time, degrees[i])\n",
     "    \n",
     "for sig_f, signals_f_delayed, time in zip(signals_f_list, signals_f_list_delayed, times_list):\n",
     "    print(f'original phases (time={time:.3f}):', from_0_to_2pi(np.angle(sig_f)))\n",
@@ -465,7 +467,7 @@
    "source": [
     "from algos_basics import get_mic_delays\n",
     "\n",
-    "beam_former = BeamFormer(mic_positions=mics_array)\n",
+    "beam_former_test = BeamFormer(mic_positions=mics_array)\n",
     "\n",
     "signals_f_tot_delay = np.empty((len(frequencies), 0))\n",
     "signals_f_tot_zero = np.empty((len(frequencies), 0))\n",
@@ -475,19 +477,24 @@
     "    # for testing purposes, we also look at the spectra without compensating\n",
     "    # for the delays.\n",
     "    signals_f_tot_zero = np.c_[signals_f_tot_zero, sig_f]\n",
+    "    \n",
+    "Rtot_zero = beam_former_test.get_correlation(signals_f_tot_zero)\n",
+    "combined_raw_zero = beam_former_test.get_mvdr_spectrum(Rtot_zero, frequencies)\n",
     "\n",
-    "Rtot_zero = beam_former.get_correlation(signals_f_tot_zero)\n",
-    "combined_raw_zero = beam_former.get_mvdr_spectrum(Rtot_zero, frequencies)\n",
-    "\n",
-    "Rtot_delay = beam_former.get_correlation(signals_f_tot_delay)\n",
+    "Rtot_delay = beam_former_test.get_correlation(signals_f_tot_delay)\n",
     "print(np.angle(Rtot_delay))\n",
-    "combined_raw_delay = beam_former.get_mvdr_spectrum(Rtot_delay, frequencies)\n",
+    "combined_raw_delay = beam_former_test.get_mvdr_spectrum(Rtot_delay, frequencies)\n",
     "\n",
-    "plot_spectrum(combined_raw_delay, degree=gt_angle_deg)\n",
+    "combined_raw_delay_bf = beam_former.get_multi_estimate()\n",
+    "\n",
+    "plot_spectrum(combined_raw_delay_bf, degree=gt_angle_deg)\n",
     "plt.title('combined raw with correct delay')\n",
     "\n",
+    "plot_spectrum(combined_raw_delay, degree=gt_angle_deg)\n",
+    "plt.title('testing: combined raw with correct delay')\n",
+    "\n",
     "plot_spectrum(combined_raw_zero, degree=gt_angle_deg)\n",
-    "plt.title('combined raw with zero delay')\n",
+    "plt.title('testing: combined raw with zero delay')\n",
     "pass"
    ]
   },
